--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,35 @@
+/* Reset CSS */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+/* Global Styles */
 body {
   background-image: url(/public/onebackground.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
+/* Header Styles */
 .header {
   background-color: rgba(255, 255, 255, 0.445);
   height: 85px;
-  animation: 1.5s slowShowing;
+  animation: slowShowing 1.5s;
 }
+
+/* Search Styles */
 .searchline {
   width: 100%;
 }
+
 .searchform {
   padding-left: 23%;
   padding-top: 15px;
 }
+
 .search_input {
   background-image: url(/public/search.png);
   background-repeat: no-repeat;
@@ -28,40 +37,32 @@ body {
   background-size: auto 90%;
   padding-left: 60px;
   height: 50px;
-  outline: none; /*убираем стандартную обводку браузера*/   
-  -moz-border-radius: 50px; /*закругляем углы для Mozilla*/  
-  -webkit-border-radius: 50px; /*закругляем углы для Chrome, Safari*/ 
+  outline: none;
+  border-radius: 50px;
   font-size: 23px;
   width: 90%;
   background-color: rgba(245, 245, 245, 0.849);
+  transition: background-color 0.3s;
 }
 
 .search_input:hover {
   background-color: rgb(255, 255, 255);
 }
+
+/* Navbar Styles */
 .navbar {
   display: flex;
 }
 
 .menu__item img {
- padding-right: 10px;
+  padding-right: 10px;
 }
 
-.mainpage-button {
-  text-decoration: none;
-}
-.background-button {
+.menu__item, .background-button, .backet-button, .info-button {
   text-decoration: none;
 }
 
-.backet-button {
-  text-decoration: none;
-}
-
-.info-button {
-  text-decoration: none;
-}
-
+/* User Profile Styles */
 .user-profile-container {
   padding-right: 3%;
   margin-left: 30px;
@@ -78,27 +79,25 @@ body {
   margin-bottom: 3px;
   width: 180px;
   height: 75px;
-
   background-color: rgba(255, 255, 255, 0.829);
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35)
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
 }
 
 .change-user-popup p {
-  transition: 0.5s;
+  transition: text-decoration 0.5s;
 }
 
 .change-user-popup p:hover {
   text-decoration: underline;
-  transition: 0.5s;
 }
 
 .change-user-popup button {
   background-color: rgba(255, 255, 255, 0.26);
   height: 20px;
   width: 60px;
-  border: solid;
-  border-width: 1px;
+  border: solid 1px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .change-user-popup button:hover {
@@ -110,15 +109,7 @@ body {
   color: black;
 }
 
-.addbutton button {
-  background-color: transparent;
-  background-repeat: no-repeat;
-  border: none;
-  cursor: pointer;
-  overflow: hidden;
-  outline: none;
-}
-
+/* Middle Page Styles */
 .user-profile-container-middlepages {
   right: 0;
   position: absolute;
@@ -127,11 +118,37 @@ body {
 }
 
 .avatar-middlepage {
-  width: 130px;
+  width: 180px;
   height: 85px;
   cursor: pointer;
 }
 
+/* User Info Styles */
+.user-info button {
+  margin-top: 7px;
+  border: solid 5px;
+  border-radius: 12px;
+  background-color: white;
+  border-color: white;
+  cursor: pointer;
+  font-size: 150%;
+  transition: background-color 0.5s, border-color 0.5s;
+}
+
+.user-info button:hover {
+  background-color: rgb(255, 91, 91);
+  border-color: rgb(255, 91, 91);
+}
+
+.user-info p {
+  background-color: white;
+  border: solid 3px;
+  border-color: white;
+  border-radius: 10px;
+  border-width: 3px;
+}
+
+/* Keyframes Animation */
 @keyframes slowShowing {
   0% {
     opacity: 0;
