--- a/src/Сheckbox.css
+++ b/src/Сheckbox.css
@@ -50,19 +50,14 @@
   transition: left 0.3s; /* Smooth transition for the menu */
 }
 
-.menu__item {
-  padding: 12px 24px;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
+.menu__item.aboutnote {
+  bottom: 0;
+  position: absolute;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
-}
-
-.menu__item.aboutnote {
-  bottom: 0;
-  margin-left: 20%;
-  position: absolute;
+  display: block;
+  width: 100%;
 }
 .menu__item:hover {
   background-color: #CFD8DC;
