Co-authored-by: Resedare, MrKartozka

--- a/src/Note.css
+++ b/src/Note.css
@@ -1,70 +1,64 @@
-/* Container Styles */
 .note-container {
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0 15px;
-	margin-top: 50px;
-  }
-  
-  /* Notes List Styles */
-  .notes-list {
-	display: grid;
-	gap: 1rem;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  }
-  
-  /* New Note Styles */
-  .note.new {
-	background-color: hsl(174, 58%, 62%);
-	overflow-y: auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+  margin-top: 50px;
 }
-  
-  .note.new input {
-	background-color: hsl(174, 58%, 62%);	
-	border: 0;
-	border-bottom: 1px solid #000;
-	margin-bottom: 15px;
+
+.notes-list {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+.note.new {
+  background-color: hsl(174, 58%, 62%);
+  overflow-y: auto;
+}
+
+.note.new input {
+  background-color: hsl(174, 58%, 62%);
+  border: 0;
+  border-bottom: 1px solid #000;
+  margin-bottom: 15px;
   font-size: 26px;
-  }
-  
-  .note.new input:focus {
-	outline: none;
-  }
-  
-  /* Textarea Styles */
-  textarea {
-	border: none;
-	resize: none;
-	word-break: break-all;
-	background-color: #67d7cc;
-	max-height: 500px;
-	overflow-y: auto;
-  }
-  
-  textarea:focus {
-	outline: none;
-  }
-  
-  /* Save Button Styles */
-  .save {
-	background-color: #e1e1e1;
-	border: none;
-	border-radius: 15px;
-	padding: 5px 10px;
-	cursor: pointer;
-  }
-  
-  .save:hover {
-	background-color: #ededed;
-  }
-  
-  /* Note Styles */
-  .note h2 {
-	border: 0;
-	border-bottom: 1px solid #000;
-	margin-bottom: 5px;
-  }
-  
+}
+
+.note.new input:focus {
+  outline: none;
+}
+
+textarea {
+  border: none;
+  resize: none;
+  word-break: break-all;
+  background-color: #67d7cc;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+.save {
+  background-color: #e1e1e1;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.save:hover {
+  background-color: #ededed;
+}
+
+.note h2 {
+  border: 0;
+  border-bottom: 1px solid #000;
+  margin-bottom: 5px;
+}
+
 .note {
   border-bottom: 2px solid #999;
   background-color: #fef68a;
@@ -78,32 +72,40 @@
   word-break: break-all;
   overflow-y: auto;
 }
-  
-  /* Note Footer Styles */
-  .note-footer {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-  }
-  
-  /* Delete Icon Styles */
-  .delete-icon {
-	cursor: pointer;
-  }
-  
 
-  ::-webkit-scrollbar {
-	width: 12px; 
-  }
-  
+.note-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  ::-webkit-scrollbar-thumb {
-	background: #b8b8b8; 
-	border-radius: 6px; 
-  }
-  
- 
-  ::-webkit-scrollbar-track {
-	background: #f1f1f1; 
-  }
-  
+.delete-icon {
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.restore-button {
+  background-color: #e1e1e1;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  width: 100px;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b8b8b8;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* .deleted-notes-list {
+  padding: 20px;
+  margin-top: 20px;
+} */
