--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-/* Reset CSS */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Global Styles */
 body {
   background-image: url(/public/onebackground.png);
   background-repeat: no-repeat;
@@ -13,14 +11,12 @@ body {
   background-attachment: fixed;
 }
 
-/* Header Styles */
 .header {
   background-color: rgba(255, 255, 255, 0.445);
   height: 85px;
   animation: slowShowing 1.5s;
 }
 
-/* Search Styles */
 .searchline {
   width: 100%;
 }
@@ -54,6 +50,13 @@ body {
   display: flex;
 }
 
+.userprofileimg {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
 .menu__item img {
   padding-right: 10px;
 }
@@ -65,23 +68,23 @@ body {
 /* User Profile Styles */
 .user-profile-container {
   padding-right: 3%;
-  margin-left: 30px;
+  margin-left: 20px;
   text-align: center;
 }
 
 .avatar {
-  width: 180px;
+  width: 200px;
   height: 85px;
-  cursor: pointer;
 }
 
 .change-user-popup {
   position: absolute;
-  margin-bottom: 3px;
-  width: 180px;
+  margin-bottom: 5px;
+  width: 200px;
   height: 75px;
   background-color: rgba(255, 255, 255, 0.829);
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
+  font-size: 110%;
 }
 
 .change-user-popup p {
@@ -109,21 +112,23 @@ body {
   text-decoration: none;
   color: black;
 }
-
 /* Middle Page Styles */
 .user-profile-container-middlepages {
   right: 0;
   position: absolute;
-  padding-right: 3%;
+  padding-right: 5%;
   text-align: center;
 }
 
 .avatar-middlepage {
-  width: 180px;
+  width: 200px;
   height: 85px;
   cursor: pointer;
 }
 
+.user-info {
+  position: absolute;
+}
 /* User Info Styles */
 .user-info button {
   margin-top: 7px;
@@ -149,7 +154,6 @@ body {
   border-width: 3px;
 }
 
-/* Keyframes Animation */
 @keyframes slowShowing {
   0% {
     opacity: 0;
@@ -158,3 +162,62 @@ body {
     opacity: 1;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .searchline, .search_input {
+    width: 100%;
+    font-size: 16px;
+  }
+  .searchline {
+    flex: 1;
+    margin: 0 10px;
+    padding-left: 10px;
+  }
+  .avatar, .avatar-middlepage {
+   width: 40px;
+   height: 40px;
+  }
+ 
+  .menu__item {
+    font-size: 14px;
+    padding: 5px;
+  }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0;
+    padding: 0 10px;
+  }
+  .buttonbox,
+  .user-info button,
+  .change-user-popup button {
+    font-size: 14px;
+  } 
+  .change-user-button {
+    font-size: 14px;
+  }
+  .user-info {
+    border-radius: 50px;
+    justify-content: center;
+    width: 200px;
+    height: 70px;
+    display: flex;
+    position: absolute;
+    font-size: 14px;
+    padding: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 40px;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.829);
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
+  }
+  .change-user-popup {
+    width: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 30px;
+  }
+}
+
