--- a/src/TodoBackground.css
+++ b/src/TodoBackground.css
@@ -5,14 +5,13 @@
     background-color: blue;
 }
 
-
 .background-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20% auto;
     background-color: rgba(255, 255, 255, 0.644);
-    width: 320px; /* Increase the width to fit 3x3 */
+    width: 320px; 
     padding: 20px;
     transition: 1s;
     border-radius: 32px;
@@ -25,10 +24,10 @@
 
 .background-list img {
     cursor: pointer;
-    width: 100%; /* Make images take full width of their container */
-    height: auto; /* Keep the aspect ratio */
-    max-width: 100px; /* Limit the width of each image */
-    max-height: 100px; /* Limit the height of each image */
+    width: 100%;
+    height: auto; 
+    max-width: 100px; 
+    max-height: 100px;
   }
 
 .background-list button {
@@ -54,16 +53,15 @@
   }
 
 .background-options {
-    display: grid; /* Use grid layout for 3x3 */
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
-    max-width: 1300px; /* Limit the maximum width */
-    
+    max-width: 1300px;
   }
 
 .background-option {
-    width: 100%; /* Take full available width in the grid */
+    width: 100%;
     cursor: pointer;
   }
 
@@ -93,12 +91,12 @@
 .background-options-buttons {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px; /* Регулируйте отступ, чтобы разместить кнопки по вашему желанию */
+    margin-top: 20px; 
 }
 
 .background-options-buttons button {
-    margin: 10px 80px; /* Регулируйте отступы кнопок по вашему желанию */
-  color: #000000; /* Цвет текста кнопок */
+  margin: 10px 80px;
+  color: #000000;
   border: solid;
   border-radius: 20px;
   border-width: 20px;
@@ -129,4 +127,10 @@
     background-color: rgb(158, 158, 158);
     border-color: rgb(158, 158, 158);
     transition: 0.5s;
+}
+
+@media only screen and (max-width: 600px) {
+  .background-list {
+    margin: 50% auto;
+  }
 }
