--- a/src/Сheckbox.css
+++ b/src/Сheckbox.css
@@ -1,4 +1,3 @@
-/* Remove the unnecessary styles */
 .menu__btn {
   display: flex;
   align-items: center;
@@ -11,7 +10,6 @@
   z-index: 1;
 }
 
-/* Style the hamburger icon */
 .menu__btn > span,
 .menu__btn > span::before,
 .menu__btn > span::after {
@@ -35,11 +33,10 @@
   transition: 0.5s;
 }
 
-/* Adjust the menu styles */
 .menu__box {
   position: fixed;
   top: 0;
-  left: -300px; /* Initially, the menu is hidden off-screen */
+  left: -300px;
   width: 300px;
   height: 100%;
   padding-top: 80px;
@@ -47,7 +44,7 @@
   text-align: center;
   background-color: #ECEFF1;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-  transition: left 0.3s; /* Smooth transition for the menu */
+  transition: left 0.3s; 
 }
 
 .menu__item.aboutnote {
@@ -63,7 +60,6 @@
   background-color: #CFD8DC;
 }
 
-/* Style the menu when the checkbox is checked */
 #menu__toggle:checked ~ .menu__btn > span {
   transform: rotate(45deg);
   transition: 0.5s;
@@ -87,16 +83,15 @@
   
 }
 
-/* Style list items and adjust spacing */
 .menu__item {
-  padding: 16px 24px; /* Increase the top and bottom padding for spacing */
+  padding: 16px 24px;
   color: #333;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
   display: block;
-  transition: background-color 0.2s; /* Smooth transition on hover */
+  transition: background-color 0.2s;
 }
 
 .menu__item:hover {
@@ -107,7 +102,6 @@
   text-decoration: none;
 }
 
-/* Close the menu when the checkbox is unchecked */
 #menu__toggle:not(:checked) ~ .menu__box {
   left: -300px;
 }
