--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,13 @@ body {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
   }
 
+  .user-profile-container-middlepages {
+    right: 0;
+    position: static;
+    padding-right: 3%;
+    text-align: center;
+  }
+
   .change-user-popup {
     width: 200px;
     left: 50%;
