--- a/src/Note.css
+++ b/src/Note.css
@@ -37,6 +37,28 @@ textarea {
   overflow-y: auto;
 }
 
+.note-content input {
+  background-color: #fef68a;
+  border: 0;
+  border-bottom: 1px solid #000;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.note-content input:focus {
+  outline: none;
+}
+
+.edit-textarea {
+  background-color: #fef68a;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  word-break: break-all;
+  resize: none;
+  overflow-y: hidden;
+}
+
 textarea:focus {
   outline: none;
 }
