--- a/src/TodoBackground.css
+++ b/src/TodoBackground.css
@@ -1,97 +1,97 @@
 .background-chose {
-    margin: 15% auto;
-    width: 250px;
-    height: 250px;
-    background-color: blue;
+  margin: 15% auto;
+  width: 250px;
+  height: 250px;
+  background-color: blue;
 }
 
 .background-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20% auto;
-    background-color: rgba(255, 255, 255, 0.644);
-    width: 320px; 
-    padding: 20px;
-    transition: 1s;
-    border-radius: 32px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20% auto;
+  background-color: rgba(255, 255, 255, 0.644);
+  width: 320px;
+  padding: 20px;
+  transition: 1s;
+  border-radius: 32px;
+}
 
-  .background-list:hover {
-    background-color: rgba(255, 255, 255, 0.925);
-    transition: 1s;
-  }
+.background-list:hover {
+  background-color: rgba(255, 255, 255, 0.925);
+  transition: 1s;
+}
 
 .background-list img {
-    cursor: pointer;
-    width: 100%;
-    height: auto; 
-    max-width: 100px; 
-    max-height: 100px;
-  }
+  cursor: pointer;
+  width: 100%;
+  height: auto;
+  max-width: 100px;
+  max-height: 100px;
+}
 
 .background-list button {
-    width: 70%;
-    height: 40%;
-    font-size: 150%;
-    border: none;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0);
-  }
+  width: 70%;
+  height: 40%;
+  font-size: 150%;
+  border: none;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0);
+}
 
 .background-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .background-options {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
-    max-width: 1300px;
-  }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 20px;
+  max-width: 1300px;
+}
 
 .background-option {
-    width: 100%;
-    cursor: pointer;
-  }
+  width: 100%;
+  cursor: pointer;
+}
 
 .background-option img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 2px solid transparent;
-    transition: border 0.3s;
-  }
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 2px solid transparent;
+  transition: border 0.3s;
+}
 
 .background-option:hover img {
-    border: 2px solid #3498db;
-  }
+  border: 2px solid #3498db;
+}
 
 .selected-background {
-    width: 200px;
-    height: 200px;
-    margin-top: 20px;
+  width: 200px;
+  height: 200px;
+  margin-top: 20px;
 }
 
 .background-option:hover {
-    border: 2px solid #7fbbff;
-    transition: 0.5s;
+  border: 2px solid #7fbbff;
+  transition: 0.5s;
 }
 
 .background-options-buttons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px; 
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 .background-options-buttons button {
@@ -106,31 +106,42 @@
 }
 
 #backgroundsavebutton {
-    background-color: #ffffff;
-    border-color:#ffffff;
-    transition: 0.5s;
+  background-color: #ffffff;
+  border-color: #ffffff;
+  transition: 0.5s;
 }
 
 #backgroundundobutton {
-    background-color: #ffffff;
-    border-color:#ffffff;
-    transition: 0.5s;
+  background-color: #ffffff;
+  border-color: #ffffff;
+  transition: 0.5s;
 }
 
 #backgroundsavebutton:hover {
-    background-color: rgb(158, 158, 158);
-    border-color: rgb(158, 158, 158);
-    transition: 0.5s;
+  background-color: rgb(158, 158, 158);
+  border-color: rgb(158, 158, 158);
+  transition: 0.5s;
 }
 
 #backgroundundobutton:hover {
-    background-color: rgb(158, 158, 158);
-    border-color: rgb(158, 158, 158);
-    transition: 0.5s;
+  background-color: rgb(158, 158, 158);
+  border-color: rgb(158, 158, 158);
+  transition: 0.5s;
 }
 
 @media only screen and (max-width: 600px) {
   .background-list {
     margin: 50% auto;
+  }
+
+  .background-options-buttons button {
+    margin: 10px 20px;
+  }
+
+  .change-user-popup {
+    width: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 30px;
   }
 }
