--- a/src/TodoBackground.css
+++ b/src/TodoBackground.css
@@ -135,7 +135,12 @@
   }
 
   .background-options-buttons button {
-    margin: 10px 20px;
+    margin: 10px 10px;
+    width: 100px;
+    height: 40px;
+    font-size: 100%;
+    text-align: center;
+    border-width: 0px;
   }
 
   .change-user-popup {
@@ -143,5 +148,53 @@
     left: 50%;
     transform: translateX(-50%);
     margin-top: 30px;
+  }
+
+  #backgroundsavebutton {
+    margin: 10px 10px;
+  }
+
+  #backgroundundobutton {
+    margin: 10px 10px;
+  }
+}
+
+@media only screen and (max-height: 900px) {
+  .background-option {
+    width: 100%;
+  }
+
+  .background-option img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .background-options {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+    max-width: 1000px;
+  }
+
+  .background-options-buttons button {
+    margin: 10px 80px;
+    color: #000000;
+    border: solid;
+    border-radius: 20px;
+    border-width: 20px;
+    border-color: white;
+    cursor: pointer;
+    font-size: 150%;
+  }
+}
+
+@media only screen and (max-height: 740px) {
+  .background-options {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+    max-width: 800px;
   }
 }
